--- a/Data_layer/Data_layer.csproj
+++ b/Data_layer/Data_layer.csproj
@@ -46,8 +46,12 @@
   <ItemGroup>
     <Compile Include="BlogDbContext.cs" />
     <Compile Include="BlogRepo.cs" />
+    <Compile Include="IComment.cs" />
     <Compile Include="DbInitialiser.cs" />
     <Compile Include="IRepo.cs" />
+    <Compile Include="ITags.cs" />
+    <Compile Include="ITopic.cs" />
+    <Compile Include="IVote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
