--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -229,6 +229,7 @@
     <Content Include="Views\Home\Topics.cshtml" />
     <Content Include="Views\Home\Post.cshtml" />
     <Content Include="Views\Home\Comments.cshtml" />
+    <Content Include="Views\Shared\Partial1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
