--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Topic.cs" />
+    <Compile Include="TopicCommentVM.cs" />
     <Compile Include="Vote.cs" />
     <Compile Include="VoteVM.cs" />
   </ItemGroup>
